UNIT PRICE ADAPTIVE / Fix vertical align

--- a/css/main.css
+++ b/css/main.css
@@ -1134,6 +1134,11 @@ img {
      -moz-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+     -moz-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #fff;
 }
 @media (min-width: 768px) {
