--- a/less/blocks/_price.less
+++ b/less/blocks/_price.less
@@ -70,14 +70,11 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
     color: #fff;
 
     @media (min-width: 768px) {
         flex-direction: row;
-    }
-    
-    @media (min-width: 1200px) {
-    
     }
 
 }
